--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,15 +1,11 @@
 .App{
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
 
 }
-.sidebar{
-    width: 30%;
-    height: 100%;
-    
-}
+
 .content{
 
 }
