--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,6 @@
 .App{
     display: flex;
     flex-direction: row;
-    min-height: 100vh;
+    height: 100vh;
     width: 100vw;
-
-}
-
-.content{
-
 }
