--- a/frontend/src/components/sidebar/sidebar.css
+++ b/frontend/src/components/sidebar/sidebar.css
@@ -7,6 +7,7 @@
     --main-dark: #342E37;
     --main-ligth: #FFFFFF;
 
+
 }
 
 *{
@@ -27,19 +28,20 @@
 }
 
 .opened {
-    width: 250px;
+    width: 270px;
+    transition: 0.6s;
 }
 
 .closed {
     width: 80px;
+    transition: 0.6s;
 }
 
 .menu-toggle {
     background-color: #5A2E98;
     height: 40px;
     width: 40px;
-    border-radius: 20px;
-    padding: 5px;
+    border-radius: 50%;
     justify-content: center;
     align-items: center;
     position: absolute;
@@ -49,29 +51,29 @@
 
 .menu-toggle-opened {
     position: absolute;
-    left: 196px;
+    left: 210px;
+    transition: 0.6s;
 }
 .menu-toggle-closed {
     position: absolute;
     left: 60px;
+    transition: 0.6s;
 }
 
 li{
     border-radius: 15px;
+    transition: 0.5s ease-in-out;
 }
 
 li:hover{
     background-color: var(--main-color);
     cursor: pointer;
-
     transition: 0.2s ease-in-out;
 }
-li:active{
-    background-color: var(--main-color);
-} 
 
 .logout{
     border-radius: 15px;
+    transition: 0.5s ease-in-out;
 }
 
 .logout:hover{
@@ -83,10 +85,7 @@ li:active{
     background-color: var(--main-color);
     color: var(--main-ligth);
     border-radius: 15px;
-    padding: 10px;
-    margin-top: 20px;
     text-align: center;
-    font-size: 20px;
     font-weight: bold;
     transition: 0.2s;
 }
