criando tela de Erro

--- a/frontend/src/Main.css
+++ b/frontend/src/Main.css
@@ -1,6 +1,13 @@
+*{
+    font-family: 'Saira', sans-serif;
+}
+
+
 .App{
     display: flex;
     flex-direction: row;
     height: 100vh;
     width: 100vw;
 }
+
+
