--- a/frontend/src/pages/public/Cadastro/styles.css
+++ b/frontend/src/pages/public/Cadastro/styles.css
@@ -2,17 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #5A2E98;
+  
 }
 .container-register {
     width: 90%;
-    margin-top: 55px;
     text-align: center;
     display: flex;
 }
 .login-form {
     width: 50%;
     margin-left: 150px;
+    background-color: F5F5F5;
 }
 .logo-img img{
     width: 300px;
