--- a/frontend/src/pages/public/Login/styles.css
+++ b/frontend/src/pages/public/Login/styles.css
@@ -2,7 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+}
+
+.content{
     background-color: #5A2E98;
+    height: 100vh;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
