--- a/frontend/src/components/Sidebar/sidebar.css
+++ b/frontend/src/components/Sidebar/sidebar.css
@@ -21,42 +21,16 @@
 .sidebar{
     background-color: var(--background-color);
     color: var(--main-ligth);
-    height: 100%;
+    height: 100vh;
     transition: 0.2s;
     padding: 10px;
     box-sizing: border-box;
-}
-
-.opened {
-    width: 270px;
+    width: 5vw;
     transition: 0.6s;
 }
 
-.closed {
-    width: 80px;
-    transition: 0.6s;
-}
-
-.menu-toggle {
-    background-color: #5A2E98;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 50px;
-    transition: 0.2s;
-}
-
-.menu-toggle-opened {
-    position: absolute;
-    left: 220px;
-    transition: 0.6s;
-}
-.menu-toggle-closed {
-    position: absolute;
-    left: 60px;
+.logo{
+    width: 80%;
     transition: 0.6s;
 }
 
@@ -86,7 +60,7 @@ li:hover{
     color: var(--main-ligth);
     border-radius: 15px;
     text-align: center;
-    font-weight: bold;
+    font-size: 1rem;
     transition: 0.2s;
 }
 
@@ -94,4 +68,21 @@ li:hover{
     cursor: pointer;
     background-color: var(--main-color-dark);
     transition: 0.2s;
+}
+.darkTheme-Button{
+    background-color: var(--main-color);
+    color: var(--main-ligth);
+    border-radius: 15px;
+    text-align: center;
+    font-size: 1rem;
+    transition: 0.2s;
+}
+.darkTheme-Button:hover{
+    cursor: pointer;
+    background-color: var(--main-color-dark);
+    transition: 0.2s;
+}
+
+.selecionado{
+    background-color: var(--main-color);
 }
