--- a/frontend/src/pages/public/ErrorPage/errorPage.css
+++ b/frontend/src/pages/public/ErrorPage/errorPage.css
@@ -1,6 +1,6 @@
 #container {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: #3A3641;
     display: flex;
     justify-content: center;
