--- a/frontend/src/components/Sidebar/sidebar.css
+++ b/frontend/src/components/Sidebar/sidebar.css
@@ -1,76 +1,78 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Saira', sans-serif;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Saira", sans-serif;
 }
 
-.sidebar{
-    background-color: var(--background-color);
-    color: var(--main-ligth);
-    height: 100vh;
-    transition: 0.2s;
-    padding: 10px;
-    box-sizing: border-box;
-    width: 5vw;
-    transition: 0.6s;
+.sidebar {
+  background-color: var(--background-color);
+  color: var(--main-ligth);
+  height: 100vh;
+  transition: 0.2s;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 5vw;
+  transition: 0.6s;
+  -webkit-box-shadow: 3px 0px 5px 0px rgba(97, 92, 97, 1);
+  -moz-box-shadow: 3px 0px 5px 0px rgba(97, 92, 97, 1);
+  box-shadow: 3px 0px 5px 0px rgba(97, 92, 97, 1);
 }
 
-.logo{
-    width: 80%;
-    transition: 0.6s;
+.logo {
+  width: 80%;
+  transition: 0.6s;
 }
 
-li{
-    border-radius: 15px;
-    transition: 0.5s ease-in-out;
+li {
+  border-radius: 15px;
+  transition: 0.5s ease-in-out;
 }
 
-li:hover{
-    background-color: var(--main-color);
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
+li:hover {
+  background-color: var(--main-color);
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
 }
 
-.logout{
-    border-radius: 15px;
-    transition: 0.5s ease-in-out;
+.logout {
+  border-radius: 15px;
+  transition: 0.5s ease-in-out;
 }
 
-.logout:hover{
-    background-color: var(--main-color);
-    transition: 0.2s;
+.logout:hover {
+  background-color: var(--main-color);
+  transition: 0.2s;
 }
 
-.create-group{
-    background-color: var(--main-color);
-    color: var(--main-ligth);
-    border-radius: 15px;
-    text-align: center;
-    font-size: 1rem;
-    transition: 0.2s;
+.create-group {
+  background-color: var(--main-color);
+  color: var(--main-ligth);
+  border-radius: 15px;
+  text-align: center;
+  font-size: 1rem;
+  transition: 0.2s;
 }
 
-.create-group:hover{
-    cursor: pointer;
-    background-color: var(--main-color-dark);
-    transition: 0.2s;
+.create-group:hover {
+  cursor: pointer;
+  background-color: var(--main-color-dark);
+  transition: 0.2s;
 }
-.darkTheme-Button{
-    background-color: var(--main-color);
-    color: var(--main-ligth);
-    border-radius: 15px;
-    text-align: center;
-    font-size: 1rem;
-    transition: 0.2s;
+.darkTheme-Button {
+  background-color: var(--main-color);
+  color: var(--main-ligth);
+  border-radius: 15px;
+  text-align: center;
+  font-size: 1rem;
+  transition: 0.2s;;
 }
-.darkTheme-Button:hover{
-    cursor: pointer;
-    background-color: var(--main-color-dark);
-    transition: 0.2s;
+.darkTheme-Button:hover {
+  cursor: pointer;
+  background-color: var(--main-color-dark);
+  transition: 0.2s;
 }
 
-.selecionado{
-    background-color: var(--main-color);
+.selecionado {
+  background-color: var(--main-color);
 }
