--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,18 +1,40 @@
-/* Tailwind */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root{
+    --main-primary : #5A2E98;
+    --main-secondary : #9747FF;
+    --main-dark : #2C004B;
+    --main-black : #342E37;
+
+    --util-green: #A0F1A8;
+    --util-red: #FF6D6D;
+    --util-yellow: #F7FA73;
+    --util-blue: #6DC2FF;
+
+    --dark-grey : #B2B2B2;
+    --dark-ciane: #404258;
+    --dark-space: #252A34;
+    --dark-solid: #1A120B;
+
+    --light-white: #F5F5F5;
+    --light-grey: #D9D9D9;
+}
+
+
+ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+li{
+    display: inline-block;
+    margin: 0 10px;
 }
