--- a/frontend/src/pages/public/LandingPage/styles.css
+++ b/frontend/src/pages/public/LandingPage/styles.css
@@ -237,6 +237,8 @@ a {
   
   #register .text p {
     margin-bottom: 32px;
+    font-weight: bold;
+    color: white;
   }
 
   #register .lading-page-container {
