Ajustes nos botões de criar grupo

--- a/frontend/src/components/CardLane/styles.css
+++ b/frontend/src/components/CardLane/styles.css
@@ -1,3 +1,9 @@
 .card-lane{
+    background-color: #2C004B;
     border-radius: 30px;
+    color: white;
+}
+
+.button{
+    background-color: aquamarine;
 }
