--- a/frontend/src/pages/app/CreateGroup/index.css
+++ b/frontend/src/pages/app/CreateGroup/index.css
@@ -1,3 +1,11 @@
 .red-text{
     color: red;
 }
+.button-grey{
+    background-color: #7C7C7C;
+}
+
+#button-purple{
+    background-color: #5A2E98;
+}
+
