--- a/frontend/src/pages/public/Login/styles.css
+++ b/frontend/src/pages/public/Login/styles.css
@@ -1,5 +1,5 @@
 .content{
-    background-color: #5A2E98;
+    background-color: var(--main-primary);
     height: 100vh;
     display: flex;
     flex-flow: column;
