adicionado nova paleta de cores na landing-page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,7 @@
 :root{
     --main-primary : #247BA0;
     --main-secondary : #1B98E0;
+    --main-light : #afd7ee;
     --main-dark : #006494;
     --main-black : #342E37;
 
