--- a/frontend/src/pages/app/Grupo/styles.css
+++ b/frontend/src/pages/app/Grupo/styles.css
@@ -23,7 +23,7 @@
     margin-bottom: 30px;
 }
 
-.app-area p{
+.app-area .subTitle{
     color: #696969;
     margin-top: 10px;
     margin-bottom: 20px;
