--- a/frontend/src/components/mapCriar/styles.css
+++ b/frontend/src/components/mapCriar/styles.css
@@ -1,11 +1,11 @@
 #map{
     position: sticky;
-    width: 500px;
+    width: 700px;
 }
 
 #map img{
-    height: calc(500px * 0,78);
-    width: 500px;
+    height: calc(700px * 0,78);
+    width: 700px;
 
 }
 #map .position-box{
@@ -30,6 +30,8 @@
     background-color: black;
     color: #fff;
     opacity: 0.8;
+    padding-left: 10px;
+    padding-top: 5px;
 }
 
 #map .position-box:hover{
