--- a/frontend/src/pages/app/CreateGroup/index.css
+++ b/frontend/src/pages/app/CreateGroup/index.css
@@ -9,3 +9,32 @@
     background-color: var(--main-primary);
 }
 
+.app-area .form-group{
+    display: flex;
+    flex-direction: row;
+}
+
+.app-area h1{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    color: var(--main-dark );
+    text-align: center;
+}
+
+.app-area .container-map{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
+
+.app-area .subTitle{
+    color: #696969;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    
+}
+
+
