--- a/frontend/src/pages/app/styles.css
+++ b/frontend/src/pages/app/styles.css
@@ -3,12 +3,13 @@
     flex-direction: row;
     justify-content: center;
     justify-content: space-between;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100%;
+    height: 100%;
     background-color: #f0f0f5;
 }
 .app-area{
-    width: 100%;
+    width: calc(100% - 55px);
+    margin-left: 55px;
     height: 100%;
     padding: 0 3vw;
     background-color: #f0f0f5;
