--- a/frontend/src/pages/app/CreateGroup/index.css
+++ b/frontend/src/pages/app/CreateGroup/index.css
@@ -1,6 +1,9 @@
 .red-text{
     color: red;
 }
+.white-text{
+    color: white;
+}
 .button-grey{
     background-color: #7C7C7C;
 }
@@ -9,19 +12,18 @@
     background-color: var(--main-primary);
 }
 
-.app-area .form-group{
+#create-group .form-group{
     display: flex;
     flex-direction: row;
 }
-
-.app-area h1{
+#create-group h1{
     margin-top: 30px;
     margin-bottom: 30px;
     color: var(--main-dark );
     text-align: center;
 }
 
-.app-area .container-map{
+#create-group .container-map{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,7 +32,7 @@
     margin-bottom: 30px;
 }
 
-.app-area .subTitle{
+#create-group .subTitle{
     color: #696969;
     margin-top: 10px;
     margin-bottom: 20px;
