:wrench: chore: configura build

--- a/backend/grupos-partidas-apis/src/main/resources/templates/registro.html
+++ b/backend/grupos-partidas-apis/src/main/resources/templates/registro.html
@@ -42,7 +42,7 @@
           <form
             method="post"
             role="form"
-            th:action="@{/register/save}"
+            th:action="@{/registro/save}"
             th:object="${jogador}"
           >
             <div class="form-group mb-3">
