--- a/backend/grupos-partidas-apis/src/main/resources/templates/registro.html
+++ b/backend/grupos-partidas-apis/src/main/resources/templates/registro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="pt-br"
   xmlns:th="http://www.thymeleaf.org"
 >
 <head>
@@ -33,10 +33,9 @@
       <div class="card-header">
           <h2 class="text-center">Registration</h2>
       </div>
-      <div th:if="${param.success}">
-          <div class="alert alert-info">
-            You have successfully registered our app!
-          </div>
+      <div class="alert alert-info"></div>
+         <p th:text="${success}"></p>
+      
       </div>
       <div class="card-body">
           <form
@@ -101,8 +100,8 @@
                  th:if="${#fields.hasErrors('senha')}"></p>
             </div>
             <div class="form-group">
-              <button class="btn btn-primary" type="submit">Register</button>
-              <span>Already registered? <a th:href="@{/login}">Login here</a></span>
+              <button class="btn btn-primary" type="submit">Registro</button>
+              <span>Já está registrado? <a th:href="@{/login}">Login here</a></span>
             </div>
           </form>
       </div>
