--- a/frontend/src/components/mapEntrar/styles.css
+++ b/frontend/src/components/mapEntrar/styles.css
@@ -1,17 +1,17 @@
-#map{
+#map-entrar{
     position: sticky;
-    width: 500px;
+    width: 600px;
 }
 
-#map img{
-    height: calc(500px * 0,78);
-    width: 500px;
+#map-entrar img{
+    height: calc(600px * 0,78);
+    width: 600px;
 
 }
-#map .position-box{
+#map-entrar .position-box{
     height: 50px;
     width: 50px;
-    background-color: var(--main-black );
+    background-color: green;
     border-radius: 25px;
     display: flex;
     align-items: center;
@@ -19,34 +19,34 @@
     position: absolute;
 }
 
-#map .position-box:hover{
+#map-entrar .position-box:hover{
     cursor: pointer;
 }
 
-#map .position-box img{
+#map-entrar .position-box img{
     height: 30px;
     width: 30px;
 }
 
 
-#map #topo{
+#map-entrar #topo{
     left: 12%;
     top: 10%;
 }
 
-#map #selva{
+#map-entrar #selva{
     left: 20%;
     top: 50%;
 }
-#map #meio{
+#map-entrar #meio{
     left: 45%;
     top: 50%;
 }
-#map #suporte{
+#map-entrar #suporte{
     left: 60%;
     top: 70%;
 }
-#map #atirador{
+#map-entrar #atirador{
     left: 80%;
     top: 70%;
 }
