--- a/backend/grupos-partidas-apis/src/main/resources/templates/index.html
+++ b/backend/grupos-partidas-apis/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br"
+<html lang="en"
     xmlns:th="http://www.thymeleaf.org"
 >
 <head>
     <meta charset="UTF-8">
-    <title>Sistema de Login e Registro</title>
+    <title>Registration and Login System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -13,14 +13,14 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Sistema de Login e Registro</a>
+        <a class="navbar-brand" th:href="@{/index}">Registration and Login System</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/registro}">Registro</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
                 </li>
             </ul>
         </div>
@@ -29,7 +29,7 @@
 <br /><br />
 <div class="container">
     <div class="row">
-        <h1 class="text-center"> Sistema de Login e Registro </h1>
+        <h1 class="text-center"> Registration and Login System </h1>
     </div>
 </div>
 </body>
