--- a/backend/grupos-partidas-apis/src/main/resources/templates/register.html
+++ b/backend/grupos-partidas-apis/src/main/resources/templates/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br"
+<html lang="en"
   xmlns:th="http://www.thymeleaf.org"
 >
 <head>
@@ -13,7 +13,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" th:href="@{/index}">Sistemma de Login e Registro</a>
+    <a class="navbar-brand" th:href="@{/index}">Registration and Login System</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -33,42 +33,44 @@
       <div class="card-header">
           <h2 class="text-center">Registration</h2>
       </div>
-      <div class="alert alert-success" th:if="${param.success}">
-        <p th:text="${param.success}"></p>      
+      <div th:if="${param.success}">
+          <div class="alert alert-info">
+            You have successfully registered our app!
+          </div>
       </div>
       <div class="card-body">
           <form
             method="post"
             role="form"
-            th:action="@{/registro/save}"
-            th:object="${jogador}"
+            th:action="@{/register/save}"
+            th:object="${user}"
           >
             <div class="form-group mb-3">
-              <label class="form-label">Nome</label>
+              <label class="form-label">First Name</label>
               <input
                       class="form-control"
-                      id="nome"
-                      name="nome"
-                      placeholder="Digite seu nome"
-                      th:field="*{nome}"
+                      id="firstName"
+                      name="firstName"
+                      placeholder="Enter first name"
+                      th:field="*{firstName}"
                       type="text"
               />
-              <p th:errors = "*{nome}" class="text-danger"
-              th:if="${#fields.hasErrors('nome')}"></p>
+              <p th:errors = "*{firstName}" class="text-danger"
+              th:if="${#fields.hasErrors('firstName')}"></p>
             </div>
 
             <div class="form-group mb-3">
-              <label class="form-label">Nickname</label>
+              <label class="form-label">Last Name</label>
               <input
                       class="form-control"
-                      id="nickName"
-                      name="nickName"
-                      placeholder="Digite seu nickname"
-                      th:field="*{nickName}"
+                      id="lastName"
+                      name="lastName"
+                      placeholder="Enter last name"
+                      th:field="*{lastName}"
                       type="text"
               />
-              <p th:errors = "*{nickName}" class="text-danger"
-                 th:if="${#fields.hasErrors('nickName')}"></p>
+              <p th:errors = "*{lastName}" class="text-danger"
+                 th:if="${#fields.hasErrors('lastName')}"></p>
             </div>
 
             <div class="form-group mb-3">
@@ -77,7 +79,7 @@
                       class="form-control"
                       id="email"
                       name="email"
-                      placeholder="Digite seu email"
+                      placeholder="Enter email address"
                       th:field="*{email}"
                       type="email"
               />
@@ -86,21 +88,21 @@
             </div>
 
             <div class="form-group mb-3">
-              <label class="form-label">Senha</label>
+              <label class="form-label">Password</label>
               <input
                       class="form-control"
-                      id="senha"
-                      name="senha"
-                      placeholder="Digite sua senha"
-                      th:field="*{senha}"
+                      id="password"
+                      name="password"
+                      placeholder="Enter password"
+                      th:field="*{password}"
                       type="password"
               />
-              <p th:errors = "*{senha}" class="text-danger"
-                 th:if="${#fields.hasErrors('senha')}"></p>
+              <p th:errors = "*{password}" class="text-danger"
+                 th:if="${#fields.hasErrors('password')}"></p>
             </div>
             <div class="form-group">
-              <button class="btn btn-primary" type="submit">Registro</button>
-              <span>Já está registrado? <a th:href="@{/login}">Login here</a></span>
+              <button class="btn btn-primary" type="submit">Register</button>
+              <span>Already registered? <a th:href="@{/login}">Login here</a></span>
             </div>
           </form>
       </div>
