--- a/backend/grupos-partidas-apis/src/main/resources/templates/users.html
+++ b/backend/grupos-partidas-apis/src/main/resources/templates/users.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br"
+<html lang="en"
     xmlns:th="http://www.thymeleaf.org"
 >
 <head>
     <meta charset="UTF-8">
-    <title>Sistema de Login e Registro</title>
+    <title>Registration and Login System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -13,7 +13,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Sistema de Login e Registro</a>
+        <a class="navbar-brand" th:href="@{/index}">Registration and Login System</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,21 +28,21 @@
 </nav>
 <div class="container">
     <div class="row col-md-10">
-        <h2>Lista de jogadores registrados</h2>
+        <h2>List of Registered Users</h2>
     </div>
     <table class="table table-bordered table-hover">
         <thead class="table-dark">
             <tr>
-                <th>Nome </th>
-                <th>Nickname</th>
+                <th>First Name</th>
+                <th>Last Name</th>
                 <th>Email</th>
             </tr>
         </thead>
         <tbody>
-            <tr th:each = "jogador : ${jogadores}">
-                <td th:text = "${jogador.nome}"></td>
-                <td th:text = "${jogador.nickName}"></td>
-                <td th:text = "${jogador.email}"></td>
+            <tr th:each = "user : ${users}">
+                <td th:text = "${user.firstName}"></td>
+                <td th:text = "${user.lastName}"></td>
+                <td th:text = "${user.email}"></td>
             </tr>
         </tbody>
     </table>
