--- a/frontend/src/pages/app/CreateGroup/index.css
+++ b/frontend/src/pages/app/CreateGroup/index.css
@@ -1,5 +1,6 @@
 #create-group{
     display: flex;
+    max-height: 100%;
 }
 
 #create-box{
@@ -37,8 +38,6 @@
     width: 100%;
 }
 #create-group h1{
-    margin-top: 30px;
-    margin-bottom: 30px;
     color: var(--main-dark );
     text-align: left;
 }
@@ -46,8 +45,6 @@
 #create-group .container-map{
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
     margin-top: 50px;
     margin-bottom: 30px;
 }
@@ -59,16 +56,45 @@
     
 }
 
-#select-position {
+#create-group #select-position {
     display: flex;
     align-items: center;
+    justify-content: flex-start;
+    font-weight: bold;    
+}
+
+#create-group .select-position-item {
+    height: 40px;
+    width: 130px;
+    border: 1px solid var(--main-primary);
+    border-radius: 10px;
+    color: var(--main-primary);
+    padding: 5px;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+}
+
+#create-group .select-position-item:hover {
+    cursor: pointer;
+}
+
+#create-group .select-position-item.selected {
+    background-color: var(--main-primary);
+    color: white;
+}
+
+#create-group .button-criar {
+    width: 100%;
+    color: white;
+    font-weight: bold;
 }
 
 .img-description{
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .img-description img{
@@ -86,7 +112,8 @@
 
 .text-description{
     background-color: #b9b9b9;
+    padding: 15px;
+    border-radius: 10px;
+    margin-top: 10px;
 }
-
-
 
