--- a/frontend/src/components/navbar/index.css
+++ b/frontend/src/components/navbar/index.css
@@ -12,8 +12,8 @@
     align-items: center;
 }
 
-#navbar .image-container #search {
-    height: 10px;
+#navbar .image-container .navbar-icon {
+    height: 25px;
 }
 
 #navbar img {
