--- a/frontend/src/pages/app/styles.css
+++ b/frontend/src/pages/app/styles.css
@@ -1,15 +1,10 @@
 .App{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    justify-content: space-between;
     min-height: 100%;
     height: 100%;
     background-color: #f0f0f5;
 }
 .app-area{
-    width: calc(100% - 55px);
-    margin-left: 55px;
+    width: 100%;
     height: 100%;
     padding: 0 3vw;
     background-color: #f0f0f5;
