adicionando novo botão de navegação nas páginas e posicionamento da navbar

--- a/frontend/src/pages/app/Chat/styles.css
+++ b/frontend/src/pages/app/Chat/styles.css
@@ -5,7 +5,9 @@
 #chat {
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    height: calc(100vh - 60px);
+    width: calc(100% - 100px);
+    margin-left: 100px;
 }
 
 #chat .chat-sidebar {
