--- a/frontend/src/components/navbar/index.css
+++ b/frontend/src/components/navbar/index.css
@@ -5,6 +5,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 #navbar .image-container {
